[package]
name = "secret2pgp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
hkdf = "0.12.4"
sha2 = "0.10.8"
base64ct = { version = "1.6", features = ["std"] }
clap = { version = "4.5.0", features = ["derive"] }
anyhow = { version = "1", features = ["std", "backtrace"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
hmac = "0.12.1"

sequoia-openpgp = { version = ">=1.19", default-features = false, features = [
    "crypto-rust",
    "allow-variable-time-crypto",
    "allow-experimental-crypto",
] }
chrono = { version = "0.4.34" }
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

libsecret2pgp = { path = "../lib" }
