[package]
name = "secret2pgp-client"
version = "0.2.0"
authors = ["Erik Tesar <erik@erik-tesar.com>"]
edition = "2021"


[dependencies]
web-sys = { version = "0.3", features = ["Location", "Window"] }

wasm-bindgen = "0.2.84"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7" }
url = "2.5.0"
console_log = { version = "1.0.0", features = ["color", "wasm-bindgen"] }
log = "0.4.21"
libsecret2pgp = { path = "../lib" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
