[package]
name = "secret2pgp-server"
version = "0.1.5"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json", "http2"] }
libsecret2pgp = { path = "../lib" }
base64ct = { version = "1.6.0", features = ["alloc", "std"] }
serde = { version = "1.0.197", features = ["derive"] }
eyre = "0.6.12"
serde_json = "1.0.115"
log = "0.4.21"
pretty_env_logger = "0.5.0"
sha2 = "0.10.8"
either = "1.10.0"
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "json",
    "ipnetwork",
] }
serde_with = "3.7.0"
sequoia-openpgp = { version = ">=1.19", default-features = false, features = [
    "crypto-rust",
    "allow-variable-time-crypto",
    "allow-experimental-crypto",
] }
url = { version = "2.5.0", features = ["serde"] }
